--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                         <span class="text-2xl mr-4" style="color: #003f5c;">&#127919;</span>
                          <div>
                             <h4 class="font-bold text-lg">Prioritize Top Pain Points</h4>
-                            <p class="text-gray-600">Focus development efforts on high-impact areas: invitation expiring, 'undoing votes' in Screening, and enabling multiple templates in 'DE2'.</p>
+                            <p class="text-gray-600">Focus development efforts on high-impact areas: invitation expiring, 'undoing votes' in Screening, and enabling multiple templates for data extraction and quality assessment.</p>
                         </div>
                     </li>
                     <li class="flex items-start">
