--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="summary" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Executive Summary</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                This comprehensive report highlights key support metrics, user feedback, and operational insights from July 2024 to June 2025. It details our ongoing commitment to efficient support, identifies areas for product enhancement, and provides a forward-looking perspective on our strategic initiatives.
+                This report highlights key support metrics, user feedback, and operational insights from July 2024 to June 2025. It details our ongoing commitment to efficient support, identifies areas for product enhancement, and provides a forward-looking perspective on our strategic initiatives.
             </p>
             <div class="card max-w-4xl mx-auto p-8">
                 <p class="text-gray-700 leading-relaxed text-lg">
@@ -88,9 +88,9 @@
         </section>
 
         <section id="kpis" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Key Performance Indicators</h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                These metrics provide a snapshot of efficiency and overall user satisfaction, reflecting our commitment to timely and effective support for our large and active user base.
+                Core metrics and performance highlights
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-8">
                 <div class="kpi-card text-center">
