--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
                 Core metrics and performance highlights
+                Stakeholders: All
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-8">
                 <div class="kpi-card text-center">
@@ -116,12 +117,6 @@
                     <p class="text-5xl font-extrabold" style="color: #003f5c;">+0.122</p>
                     <p class="text-lg text-gray-600 mt-2">Overall Sentiment</p>
                     <p class="text-sm text-gray-500">(Mar 2025)</p>
-                </div>
-                 <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #ffc425;">&#128336;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">1h 15m</p>
-                    <p class="text-lg text-gray-600 mt-2">Median A3 Resolution</p>
-                    <p class="text-sm text-gray-500">(May 2025)</p>
                 </div>
                 <div class="kpi-card text-center">
                     <div class="text-5xl mb-2" style="color: #3f7b8e;">&#128077;</div>
@@ -153,9 +148,10 @@
         </section>
 
         <section id="pain-points" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Deep Dive: Top Pain Points</h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Users' Pain Points</h2>
              <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                From July 2024 to June 2025, we analyzed the specific challenges users faced within our top review categories. This breakdown provides actionable insights into the most critical usability hurdles that need to be addressed.
+                Areas of frustration and friction
+                Stakeholders: Product and Engineering, Academic Success
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
@@ -186,9 +182,10 @@
         </section>
 
         <section id="audits" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Monthly Ticket Audit Insights</h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Monthly Audit of User Wishlist and Feedback </h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Our monthly ticket audits provide a direct channel to our users' evolving needs and feedback. Below is a summary of feature requests, critical DE1 issues, and general feedback, offering a roadmap for future improvements.
+                What our users are asking for
+                Stakeholders: Product and Engineering, Leadership
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
@@ -392,9 +389,10 @@
         </section>
 
         <section id="domain-frequency" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 B2B tickets per region based on domains</h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Regional and Institutional Insights</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                This chart illustrates the frequency of users by email domain observed in our system, categorized by their associated geographical regions. This data helps us understand the distribution of our user base and identify dominant B2B tickets within specific regions.
+                Ticket patterns by location and domain
+                Stakeholders: Sales, Academic Success, Marketing
             </p>
             <div class="card">
                 <div class="chart-container-large">
