--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
         <section id="pain-points" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Users' Pain Points</h2>
              <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Areas of frustration and friction
-             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
+                Areas of frustration and friction<br>
                 Stakeholders: Product and Engineering, Academic Success
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
