--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section id="kpis" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Core metrics and performance highlights
+                Core metrics and performance highlights <br>
                 Stakeholders: All
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-8">
