--- a/index.html
+++ b/index.html
@@ -123,26 +123,25 @@
                     <p class="text-5xl font-extrabold" style="color: #003f5c;">91.65%</p>
                     <p class="text-lg text-gray-600 mt-2">Team CSAT</p>
                 </div>
+        </section>
+        
+        <section id="review-issues" class="mb-16">
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 platform stage-related issues </h2>
+             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
+                "Screening" remains the most frequent review-related issue, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
+            </p>
+            <div class="card">
+                <div class="chart-container">
+                    <canvas id="reviewIssuesChart"></canvas>
+                </div>
             </div>
              <div class="mt-8 bg-blue-50 border-l-4 border-blue-500 text-blue-800 p-6 rounded-lg shadow-md">
                 <div class="flex items-center">
                     <div class="text-3xl mr-4">&#128200;</div>
                     <div>
                         <h3 class="font-bold text-xl">Emerging Trend to Watch</h3>
-                        <p class="text-md mt-1">DE1 tagged tickets are steadily increasing, approaching the top 3 review issues. This requires proactive investigation to maintain our high standards of user experience.</p>
+                        <p class="text-md mt-1">DE1 tagged tickets are steadily increasing, approaching the top 3 platform stage-related issues. This requires proactive investigation to maintain our high standards of user experience.</p>
                     </div>
-                </div>
-            </div>
-        </section>
-        
-        <section id="review-issues" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 Review Issues</h2>
-             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                This chart illustrates the primary categories of user support requests. "Screening" remains the most frequent issue, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
-            </p>
-            <div class="card">
-                <div class="chart-container">
-                    <canvas id="reviewIssuesChart"></canvas>
                 </div>
             </div>
         </section>
