--- a/index.html
+++ b/index.html
@@ -87,43 +87,44 @@
             </div>
         </section>
 
-        <section id="kpis" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
-            <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Core metrics and performance highlights <br>
-                Stakeholders: All
-            </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-8">
-                <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #ff764a;">&#128195;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">25,607</p>
-                    <p class="text-lg text-gray-600 mt-2">Total Tickets</p>
-                    <p class="text-sm text-gray-500">(May 2025)</p>
-                </div>
-                <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #ffa600;">&#9201;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">1h 7m</p>
-                    <p class="text-lg text-gray-600 mt-2">Median First Response</p>
-                    <p class="text-sm text-gray-500">(May 2025)</p>
-                </div>
-                <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #7a5195;">&#9989;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">58m 46s</p>
-                    <p class="text-lg text-gray-600 mt-2">Median Resolution Time</p>
-                    <p class="text-sm text-gray-500">(May 2025)</p>
-                </div>
-                <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #bc5090;">&#128578;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">+0.122</p>
-                    <p class="text-lg text-gray-600 mt-2">Overall Sentiment</p>
-                    <p class="text-sm text-gray-500">(Mar 2025)</p>
-                </div>
-                <div class="kpi-card text-center">
-                    <div class="text-5xl mb-2" style="color: #3f7b8e;">&#128077;</div>
-                    <p class="text-5xl font-extrabold" style="color: #003f5c;">91.65%</p>
-                    <p class="text-lg text-gray-600 mt-2">Team CSAT</p>
-                </div>
-        </section>
+      <section id="kpis" class="mb-16">
+    <h2 class="text-3xl font-bold text-center mb-2 section-title">Community Support at a Glance</h2>
+    <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
+        Core metrics and performance highlights <br>
+        Stakeholders: All
+    </p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-5 gap-8 justify-center">
+        <div class="kpi-card text-center">
+            <div class="text-5xl mb-2" style="color: #ff764a;">&#128195;</div>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">25,607</p>
+            <p class="text-lg text-gray-600 mt-2">Total Tickets</p>
+            <p class="text-sm text-gray-500">(May 2025)</p>
+        </div>
+        <div class="kpi-card text-center">
+            <div class="text-5xl mb-2" style="color: #ffa600;">&#9201;</div>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">1h 7m</p>
+            <p class="text-lg text-gray-600 mt-2">Median First Response</p>
+            <p class="text-sm text-gray-500">(May 2025)</p>
+        </div>
+        <div class="kpi-card text-center">
+            <div class="text-5xl mb-2" style="color: #7a5195;">&#9989;</div>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">58m 46s</p>
+            <p class="text-lg text-gray-600 mt-2">Median Resolution Time</p>
+            <p class="text-sm text-gray-500">(May 2025)</p>
+        </div>
+        <div class="kpi-card text-center">
+            <div class="text-5xl mb-2" style="color: #bc5090;">&#128578;</div>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">+0.122</p>
+            <p class="text-lg text-gray-600 mt-2">Overall Sentiment</p>
+            <p class="text-sm text-gray-500">(Mar 2025)</p>
+        </div>
+        <div class="kpi-card text-center">
+            <div class="text-5xl mb-2" style="color: #3f7b8e;">&#128077;</div>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">91.65%</p>
+            <p class="text-lg text-gray-600 mt-2">Team CSAT</p>
+        </div>
+    </div>
+</section>
         
         <section id="review-issues" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 platform stage-related issues </h2>
