--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <section id="pain-points" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Users' Pain Points</h2>
              <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Areas of frustration and friction<br>
+                Areas of frustration and friction <br>
                 Stakeholders: Product and Engineering, Academic Success
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -184,7 +184,7 @@
         <section id="audits" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Monthly Audit of User Wishlist and Feedback </h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                What our users are asking for
+                What our users are asking for <br>
                 Stakeholders: Product and Engineering, Leadership
             </p>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -391,7 +391,7 @@
         <section id="domain-frequency" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Regional and Institutional Insights</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Ticket patterns by location and domain
+                Ticket patterns by location and domain <br>
                 Stakeholders: Sales, Academic Success, Marketing
             </p>
             <div class="card">
@@ -461,7 +461,8 @@
         <section id="recommendations">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Recommendations</h2>
              <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Based on our comprehensive analysis, we propose the following strategic actions to enhance product functionality, improve user experience, and maintain our high standard of support.
+                What can we do better next quarter? <br>
+                Stakeholders: All 
             </p>
             <div class="card max-w-4xl mx-auto">
                 <ul class="space-y-4">
