--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <span class="text-xl mr-3" style="color: #bc5090;">&#128295;</span>
                             <div>
                                 <h4 class="font-bold text-lg">Feb: Ability to change the judgement</h4>
-                                <p class="text-gray-600 text-sm">Users required the functionality to alter a previously submitted judgement for review purposes.</p>
+                                <p class="text-gray-600 text-sm">Users required the ability to customise judgement scales to match the various QA templates used across different types of reviews.</p>
                             </div>
                         </div>
                         <div class="audit-item">
