--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             <span class="text-xl mr-3" style="color: #bc5090;">&#128295;</span>
                             <div>
                                 <h4 class="font-bold text-lg">Mar: Start from scratch QA template</h4>
-                                <p class="text-gray-600 text-sm">The ability to create a QA template from scratch was a user need to customize quality assurance processes.</p>
+                                <p class="text-gray-600 text-sm">The ability to start from scratch again after selecting a QA template was a user need to enhance customizability.</p>
                             </div>
                         </div>
                     </div>
