--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 </section>
         
         <section id="review-issues" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 platform stage-related issues </h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 Platform Stage-related Ticket Queries </h2>
              <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                "Screening" remains the most frequent review-related issue, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
+                We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
             </p>
             <div class="card">
                 <div class="chart-container">
