--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <section id="domain-frequency" class="mb-16">
             <h2 class="text-3xl font-bold text-center mb-2 section-title">Regional and Institutional Insights</h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
-                Ticket patterns by location and domain <br>
+                Top 3 email domains by region <br>
                 Stakeholders: Sales, Academic Success, Marketing
             </p>
             <div class="card">
