--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </p>
             <div class="card max-w-4xl mx-auto p-8">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                    Over the past year, our GrooveHQ support inbox operations have maintained a high level of efficiency, processing over 25,000 tickets with commendable response and resolution times. User sentiment remains positive, driven by continuous improvements and attentive service. We've identified critical areas through detailed audits, such as specific pain points within our core functionalities (Screening, Import, DE2), and emerging trends like the increase in DE1-related issues. This report also introduces new insights into invitation and account management challenges, regional B2B ticket patterns, and outlines our upcoming product releases and strategic focus areas.
+                    Over the past year, our GrooveHQ support inbox operations have maintained a high level of efficiency, processing over 25,000 tickets with commendable response and resolution times. User sentiment remains positive, driven by continuous improvements and attentive service. We've identified critical areas through detailed audits, such as specific pain points within our core functionalities (Screening, Import, DE2), and emerging trends like the increase in DE1-related issues. This report also introduces insights into invitation and account management challenges, regional B2B ticket patterns, and outlines our strategic focus areas.
                 </p>
             </div>
         </section>
@@ -427,7 +427,7 @@
                         <span class="text-2xl mr-4" style="color: #003f5c;">&#128273;</span>
                         <div>
                             <h4 class="font-bold text-lg">Improving Account and Invitation Reliability</h4>
-                            <p class="text-gray-600">Focusing on robust solutions for invitation expiry and Knowledge Base improvement for optimal user profile management to minimize support overhead.</p>
+                            <p class="text-gray-600">Focusing on robust solutions for B2B invitation expiry, and Knowledge Base improvement for optimal user profile management to minimize Community support overhead.</p>
                         </div>
                     </li>
                     <li class="flex items-start">
