--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </p>
             <div class="card max-w-4xl mx-auto p-8">
                 <p class="text-gray-700 leading-relaxed text-lg">
-                    Over the past year, our GrooveHQ support inbox operations have maintained a high level of efficiency, processing over 25,000 tickets with commendable response and resolution times. User sentiment remains positive, driven by continuous improvements and attentive service. We've identified critical areas through detailed audits, such as specific pain points within our core functionalities (Screening, Import, DE2), and emerging trends like the increase in DE1-related issues. This report also introduces insights into invitation and account management challenges, regional B2B ticket patterns, and outlines our strategic focus areas.
+                    Over the past year, our GrooveHQ support inbox operations have maintained a high level of efficiency, processing over 25,000 tickets with commendable response and resolution times. User sentiment remains positive, driven by continuous improvements and attentive service. We've identified critical areas through detailed audits, such as specific pain points within our core functionalities, and emerging trends like the increase in DE1-related issues. This report also introduces insights into invitation and account management challenges, regional B2B ticket patterns, and outlines our strategic focus areas.
                 </p>
             </div>
         </section>
