--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="kpi-card text-center">
             <div class="text-5xl mb-2" style="color: #bc5090;">&#128578;</div>
-            <p class="text-5xl font-extrabold" style="color: #003f5c;">+0.122</p>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">Positive (+0.122)</p>
             <p class="text-lg text-gray-600 mt-2">Overall Sentiment</p>
             <p class="text-sm text-gray-500">(Mar 2025)</p>
         </div>
