--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
         </div>
         <div class="kpi-card text-center">
             <div class="text-5xl mb-2" style="color: #ffa600;">&#9201;</div>
-            <p class="text-5xl font-extrabold" style="color: #003f5c;">1h 7m</p>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">1h 7m<sup>1</sup></p>
             <p class="text-lg text-gray-600 mt-2">Median First Response</p>
         </div>
         <div class="kpi-card text-center">
             <div class="text-5xl mb-2" style="color: #7a5195;">&#9989;</div>
-            <p class="text-5xl font-extrabold" style="color: #003f5c;">58m 42s</p>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">58m 42s<sup>1</sup></p>
             <p class="text-lg text-gray-600 mt-2">Median Resolution Time</p>
         </div>
         <div class="kpi-card text-center">
             <div class="text-5xl mb-2" style="color: #bc5090;">&#128578;</div>
-            <p class="text-5xl font-extrabold" style="color: #003f5c;">Positive (+0.122)</p>
-            <p class="text-lg text-gray-600 mt-2">Overall Sentiment</p>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">Positive (81.7%)<sup>2</sup></p>
+            <p class="text-lg text-gray-600 mt-2">Overall User Sentiment</p>
             <p class="text-sm text-gray-500">(Mar 2025)</p>
         </div>
         <div class="kpi-card text-center">
             <div class="text-5xl mb-2" style="color: #3f7b8e;">&#128077;</div>
-            <p class="text-5xl font-extrabold" style="color: #003f5c;">91.65%</p>
+            <p class="text-5xl font-extrabold" style="color: #003f5c;">91.65%<sup>1</sup></p>
             <p class="text-lg text-gray-600 mt-2">Team CSAT</p>
         </div>
     </div>
