--- a/index.html
+++ b/index.html
@@ -135,6 +135,308 @@
                     <canvas id="reviewIssuesChart"></canvas>
                 </div>
             </div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top Issues by Category - Separate Charts</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Chart.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f0f2f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .main-container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            width: 100%;
+            max-width: 1200px; /* Increased max-width to comfortably fit three charts */
+            box-sizing: border-box;
+        }
+        .charts-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid for charts */
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .chart-card {
+            background-color: #f9fafb;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+        }
+        canvas {
+            max-height: 250px; /* Fixed height for each individual chart */
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <div class="main-container">
+        <h2 class="text-3xl font-bold text-center mb-2" style="color: #003f5c;">Top Issues by Category (Percentages)</h2>
+        <p class="text-center text-gray-600 mb-6 text-sm">Total Tickets: Screening (1425), Import (1227), DE2 (754) as of May 2025</p>
+
+        <div class="charts-grid">
+            <!-- Screening Chart -->
+            <div class="chart-card">
+                <h3 class="text-xl font-bold mb-4 text-center" style="color: #4285F4;">Screening Issues</h3>
+                <canvas id="screeningChart"></canvas>
+            </div>
+
+            <!-- Import Chart -->
+            <div class="chart-card">
+                <h3 class="text-xl font-bold mb-4 text-center" style="color: #000080;">Import Issues</h3>
+                <canvas id="importChart"></canvas>
+            </div>
+
+            <!-- DE2 Chart -->
+            <div class="chart-card">
+                <h3 class="text-xl font-bold mb-4 text-center" style="color: #4169E1;">DE2 Issues</h3>
+                <canvas id="de2Chart"></canvas>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // Function to wrap long labels for better readability on the chart
+        function wrapLabel(label) {
+            const maxLength = 25; // Max length for labels before wrapping
+            if (typeof label !== 'string' || label.length <= maxLength) {
+                return label;
+            }
+            const words = label.split(' ');
+            const lines = [];
+            let currentLine = '';
+
+            words.forEach(word => {
+                if ((currentLine + ' ' + word).trim().length > maxLength && currentLine !== '') {
+                    lines.push(currentLine.trim());
+                    currentLine = word;
+                } else {
+                    currentLine = (currentLine + ' ' + word).trim();
+                }
+            });
+
+            if (currentLine) {
+                lines.push(currentLine.trim());
+            }
+            return lines;
+        }
+
+        // --- Screening Chart ---
+        const screeningCtx = document.getElementById('screeningChart').getContext('2d');
+        new Chart(screeningCtx, {
+            type: 'bar',
+            data: {
+                labels: [
+                    'Undo screening vote',
+                    'Reviewer mode',
+                    'More sorting options'
+                ],
+                datasets: [{
+                    label: 'Percentage',
+                    data: [7.3, 5.5, 1.5],
+                    backgroundColor: '#4285F4', // Google Blue - Darker shade for Screening
+                    borderColor: '#1A73E8',     // Slightly darker border
+                    borderWidth: 2,
+                    borderRadius: 5
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                indexAxis: 'y',
+                scales: {
+                    x: {
+                        beginAtZero: true,
+                        max: 10, // Max for Screening percentages
+                        grid: { color: '#e0e0e0' },
+                        ticks: {
+                            color: '#333',
+                            font: { weight: 'bold' },
+                            callback: function(value) { return value + '%'; }
+                        }
+                    },
+                    y: {
+                        grid: { display: false },
+                        ticks: {
+                            color: '#333',
+                            font: { size: 14 },
+                            callback: function(value, index, ticks) { return wrapLabel(this.getLabelForValue(value)); }
+                        }
+                    }
+                },
+                plugins: {
+                    legend: { display: false },
+                    tooltip: {
+                        enabled: true,
+                        backgroundColor: '#003f5c',
+                        titleFont: { size: 16, weight: 'bold' },
+                        bodyFont: { size: 14 },
+                        callbacks: {
+                            title: function(tooltipItems) {
+                                const item = tooltipItems[0];
+                                let label = item.chart.data.labels[item.dataIndex];
+                                return Array.isArray(label) ? label.join(' ') : label;
+                            },
+                            label: function(context) {
+                                return `${context.dataset.label}: ${context.parsed.x}%`;
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
+        // --- Import Chart ---
+        const importCtx = document.getElementById('importChart').getContext('2d');
+        new Chart(importCtx, {
+            type: 'bar',
+            data: {
+                labels: [
+                    'Incompatible import file',
+                    'External issues',
+                    'Missing info on imported reference'
+                ],
+                datasets: [{
+                    label: 'Percentage',
+                    data: [10, 2.9, 2.8],
+                    backgroundColor: '#000080', // Navy blue for Import
+                    borderColor: '#00005C',     // Darker navy blue border
+                    borderWidth: 2,
+                    borderRadius: 5
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                indexAxis: 'y',
+                scales: {
+                    x: {
+                        beginAtZero: true,
+                        max: 10, // Max for Import percentages
+                        grid: { color: '#e0e0e0' },
+                        ticks: {
+                            color: '#333',
+                            font: { weight: 'bold' },
+                            callback: function(value) { return value + '%'; }
+                        }
+                    },
+                    y: {
+                        grid: { display: false },
+                        ticks: {
+                            color: '#333',
+                            font: { size: 14 },
+                            callback: function(value, index, ticks) { return wrapLabel(this.getLabelForValue(value)); }
+                        }
+                    }
+                },
+                plugins: {
+                    legend: { display: false },
+                    tooltip: {
+                        enabled: true,
+                        backgroundColor: '#003f5c',
+                        titleFont: { size: 16, weight: 'bold' },
+                        bodyFont: { size: 14 },
+                        callbacks: {
+                            title: function(tooltipItems) {
+                                const item = tooltipItems[0];
+                                let label = item.chart.data.labels[item.dataIndex];
+                                return Array.isArray(label) ? label.join(' ') : label;
+                            },
+                            label: function(context) {
+                                return `${context.dataset.label}: ${context.parsed.x}%`;
+                            }
+                        }
+                    }
+                }
+            }
+        });
+
+        // --- DE2 Chart ---
+        const de2Ctx = document.getElementById('de2Chart').getContext('2d');
+        new Chart(de2Ctx, {
+            type: 'bar',
+            data: {
+                labels: [
+                    'Set up multiple DE/QA templates in one project',
+                    'Copy/paste columns, raws, tables from pdf to form',
+                    'Page loading issue / "load more"'
+                ],
+                datasets: [{
+                    label: 'Percentage',
+                    data: [1.6, 0.5, 0.5],
+                    backgroundColor: '#4169E1', // Royal Blue for DE2
+                    borderColor: '#2A4B9F',     // Darker Royal Blue border
+                    borderWidth: 2,
+                    borderRadius: 5
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                indexAxis: 'y',
+                scales: {
+                    x: {
+                        beginAtZero: true,
+                        max: 2, // Max for DE2 percentages (adjusted for smaller values)
+                        grid: { color: '#e0e0e0' },
+                        ticks: {
+                            color: '#333',
+                            font: { weight: 'bold' },
+                            callback: function(value) { return value + '%'; }
+                        }
+                    },
+                    y: {
+                        grid: { display: false },
+                        ticks: {
+                            color: '#333',
+                            font: { size: 14 },
+                            callback: function(value, index, ticks) { return wrapLabel(this.getLabelForValue(value)); }
+                        }
+                    }
+                },
+                plugins: {
+                    legend: { display: false },
+                    tooltip: {
+                        enabled: true,
+                        backgroundColor: '#003f5c',
+                        titleFont: { size: 16, weight: 'bold' },
+                        bodyFont: { size: 14 },
+                        callbacks: {
+                            title: function(tooltipItems) {
+                                const item = tooltipItems[0];
+                                let label = item.chart.data.labels[item.dataIndex];
+                                return Array.isArray(label) ? label.join(' ') : label;
+                            },
+                            label: function(context) {
+                                return `${context.dataset.label}: ${context.parsed.x}%`;
+                            }
+                        }
+                    }
+                }
+            }
+        });
+    </script>
+</body>
+</html>
+
+
+            
              <div class="mt-8 bg-blue-50 border-l-4 border-blue-500 text-blue-800 p-6 rounded-lg shadow-md">
                 <div class="flex items-center">
                     <div class="text-3xl mr-4">&#128200;</div>
