--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
                 <div class="charts-grid">
                     <!-- Screening Chart -->
                     <div class="chart-card">
-                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #4285F4;">Screening Issues</h3>
+                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #4285F4;">Screening</h3>
                         <canvas id="screeningChart"></canvas>
                     </div>
 
                     <!-- Import Chart -->
                     <div class="chart-card">
-                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #000080;">Import Issues</h3>
+                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #000080;">Import</h3>
                         <canvas id="importChart"></canvas>
                     </div>
 
                     <!-- DE2 Chart -->
                     <div class="chart-card">
-                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #4169E1;">DE2 Issues</h3>
+                        <h3 class="text-xl font-bold mb-4 text-center" style="color: #4169E1;">DE2</h3>
                         <canvas id="de2Chart"></canvas>
                     </div>
                 </div>
@@ -676,7 +676,7 @@
                 labels: [
                     'Incompatible import file',
                     'External issues',
-                    'Missing info on imported reference'
+                    'Missing info in references'
                 ],
                 datasets: [{
                     label: 'Percentage',
@@ -740,7 +740,7 @@
             data: {
                 labels: [
                     'Set up multiple DE/QA templates in one project',
-                    'Copy/paste columns, raws, tables from pdf to form',
+                    'Copy/paste columns, rows, tables from pdf',
                     'Page loading issue / "load more"'
                 ],
                 datasets: [{
