--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
 
         <section id="platform-stage-issues" class="mb-16">
-            <h2 class="text-3xl font-bold text-center mb-2 section-title">Top 3 Platform Stage-related Ticket Queries </h2>
+            <h2 class="text-3xl font-bold text-center mb-2 section-title">Platform Stage-related Ticket Queries </h2>
             <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
                 We analysed our support tickets by platform stage to identify where the highest volumes of queries occur. "Screening" (which includes Title and abstracts screening and Full text review stages) remains the most frequent query, followed closely by "Import" and "DE2", indicating key areas for product refinement and user education.
             </p>
@@ -740,7 +740,7 @@
             data: {
                 labels: [
                     'Set up multiple DE/QA templates in one project',
-                    'Copy/paste columns, rows, tables from pdf',
+                    'Improved PDF copy-and-paste functionality',
                     'Page loading issue / "load more"'
                 ],
                 datasets: [{
