--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account management</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts:</strong> CM Impact rating 3/3,<br>Ticket reach, approx 80% of non-general query related account management issues.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts:</strong> CM Impact rating 3/3<br>Ticket reach, approx 80% of non-general query<sup>3</sup> related account management issues.</span></li>
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">2.</span><span><strong class="block">x:</strong> 5.5%</span></li>
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">3.</span><span><strong class="block">x:</strong> 1.5%</span></li>
                     </ul>
@@ -239,6 +239,7 @@
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">3.</span><span><strong class="block">x:</strong> 0.5%</span></li>
                     </ul>
                 </div>
+            <p class="text-sm text-gray-500 mt-8 text-center">3. General queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>
             </div>
         </section>
 
