--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account management</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts:</strong> CM Impact rating 3/3<br>Ticket reach, approx 80% of non-general query<sup>3</sup> related account management issues.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts:</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>3</sup> related account management issues.</span></li>
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">2.</span><span><strong class="block">x:</strong> 5.5%</span></li>
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">3.</span><span><strong class="block">x:</strong> 1.5%</span></li>
                     </ul>
