--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Settings</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">1.</span><span><strong class="block">x:</strong> 10%</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">2.</span><span><strong class="block">x:</strong> 2.9%</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">1.</span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place:</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>3</sup> related settings issues.</span></li>
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">3.</span><span><strong class="block">x:</strong> 2.8%</span></li>
                     </ul>
                 </div>
