--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
                         <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">3.</span><span><strong class="block">x:</strong> 0.5%</span></li>
                     </ul>
                 </div>
+              <h2 class="text-3xl font-bold text-center mb-2 section-title">Users' Pain Points</h2>
+            <p class="text-center text-gray-600 mb-8 max-w-3xl mx-auto">
+                Areas of frustration and friction <br>
+                Stakeholders: Product and Engineering, Academic Success
+            </p>
         <p class="text-sm text-gray-500 mt-8 text-center">3. General queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>  
         </section>
 
