--- a/index.html
+++ b/index.html
@@ -218,24 +218,20 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account management</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts:</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related account management issues.</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">2.</span><span><strong class="block">x:</strong> 5.5%</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">3.</span><span><strong class="block">x:</strong> 1.5%</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;">1.</span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Account Management tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Settings</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">1.</span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place:</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related settings issues.</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">3.</span><span><strong class="block">x:</strong> 2.8%</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;">1.</span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Settings tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Sign in/up page</h3>
+                    <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Reset</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">1.</span><span><strong class="block">x:</strong> 1.6%</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">2.</span><span><strong class="block">x:</strong> 0.5%</span></li>
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">3.</span><span><strong class="block">x:</strong> 0.5%</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;">1.</span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Reset tickets.</span></li>
+                    </ul></span></li>
                     </ul>
                 </div>
             </div>
