--- a/index.html
+++ b/index.html
@@ -218,24 +218,24 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Account management</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Account Management tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ef5675;"></span><span><strong class="block">Users creating multiple accounts (individual and institution) and then asking to merge accounts</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Account Management tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Settings</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Settings tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Settings tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Reset</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong> CM IMPACT rating: 3<br>Ticket REACH: approx 80% of non-general query<sup>c</sup> related Reset tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ffa600;"></span><span><strong class="block">Users want to reset their own reviews because of wrong import or change in the search strategy</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Reset tickets.</span></li>
                     </ul></span></li>
                     </ul>
                 </div>
             </div>
-        <p class="text-sm text-gray-500 mt-8 text-center">c - general queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>  
+        <p class="text-sm text-gray-500 mt-8 text-center">e - general queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>  
         </section>
 
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
