--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     </ul>
                 </div>
             </div>
-        <p class="text-sm text-gray-500 mt-8 text-center">e - general queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>  
+        <p class="text-sm text-gray-500 mt-8 text-center">c / d / e - general queries include requests outside our standard service, incorrectly tagged tickets, expected platform behavior, autotagging or external user issues, information-only tickets, cases with no user follow-up, and tickets with no platform functionality issues.</p>  
         </section>
 
         <hr class="border-t-2 border-gray-200 my-16"> <!-- Visual separator -->
