--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
     <footer class="bg-gray-800 text-white mt-16">
         <div class="container mx-auto px-6 py-4 text-center text-sm">
             <p>&copy; 2025 Covidence.</p>
-            <p class="mt-1">Internal Report - Created by Tenber Grota on XX July 2025 / Approved by Nancy El-Shayeb and Laura Mellor on XX July 2025 / Released XX July 2025</p>
+            <p class="mt-1">Internal Report - Completed by Tenber Grota on XX July 2025 in collaboration with Nancy El-Shayeb / Approved by Laura Mellor on XX July 2025 / Released XX July 2025</p>
         </div>
     </footer>
 
