--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 <div class="card">
                     <h3 class="text-2xl font-bold mb-4" style="color: #003f5c;">Settings</h3>
                     <ul class="space-y-4 text-gray-700">
-                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Settings tickets.</span></li>
+                        <li class="flex items-start"><span class="font-bold text-lg mr-3" style="color: #ff764a;"></span><span><strong class="block">Organisational membership and review invitations expiring without being clicked or not reaching the user in the first place</strong> CM IMPACT rating<sup>c</sup>: 3<br>Ticket REACH<sup>d</sup>: approx 80% of non-general query<sup>e</sup> related Settings tickets.</span></li>
                     </ul>
                 </div>
                 <div class="card">
